--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -31,3 +31,57 @@ body {
     text-wrap: balance;
   }
 }
+
+.entry {
+  color: white;
+  background: rgba(0, 0, 0, 0.75);
+}
+
+.fire {
+  color: #f5f5f5; /* Light text color */
+  text-align: center; /* Center alignment of text */
+  /* Multi-layered text-shadow for fire effect */
+  text-shadow: 0px -1px 3px #fff,
+    /* Innermost layer - intense heat (white) */ 0px -2px 6px #ff3,
+    /* Second layer - core of flame (yellow) */ 0px -6px 12px #f90,
+    /* Middle layer - body of flame (orange) */ 0px -10px 20px #c33; /* Outermost layer - edges of flame (red) */
+}
+
+.entry:nth-of-type(1) {
+  margin-top: 0;
+}
+
+.entry:nth-of-type(2) {
+  background: rgba(0, 0, 0, 0.5);
+  color: orange;
+}
+
+.entry:nth-of-type(3) {
+  background: rgba(0, 0, 0, 0.25);
+  color: lightblue;
+}
+
+/* Define the animation named "flicker" */
+@keyframes flicker {
+  /* Initial state of animation */
+  0%, 
+    /* Final state of animation */
+    100% {
+    text-shadow: 0 -1px 3px #fff,
+      /* Innermost layer - intense heat (white) */ 0 -2px 6px #ff3,
+      /* Second layer - core of flame (yellow) */ 0 -6px 12px #f90,
+      /* Middle layer - body of flame (orange) */ 0 -10px 20px #c33; /* Outermost layer - edges of flame (red) */
+  }
+  /* Middle state of animation */
+  50% {
+    text-shadow: 0 -2px 6px #fff,
+      /* Innermost layer - intense heat (white) */ 0 -4px 12px #ff3,
+      /* Second layer - core of flame (yellow) */ 0 -8px 16px #f90,
+      /* Middle layer - body of flame (orange) */ 0 -12px 24px #c33; /* Outermost layer - edges of flame (red) */
+  }
+}
+
+.fire {
+  /* Apply the "flicker" animation to the .fire class */
+  animation: flicker 2s infinite;
+}
