--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,12 +18,6 @@
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
 }
 
 @layer utilities {
@@ -32,9 +26,15 @@ body {
   }
 }
 
+body {
+  background-color: rgba(255, 255, 255, 0.75);
+}
+
 .entry {
   color: white;
   background: rgba(0, 0, 0, 0.75);
+  display: grid;
+  grid-template-columns: 0.5fr 0.5fr 2fr;
 }
 
 .fire {
